# aegis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  bench-history.csv  cyrius.cyml
.github/workflows/: ci.yml  release.yml
docs/: doc-health.md
docs/adr/: 0001-sentinel-values-for-absent-state.md  0002-cstr-api-boundary.md  0003-integer-array-threat-counts.md  0004-hashmap-flavor-selection.md  0005-fixed-cap-ring-buffer-events-log.md  README.md
docs/architecture/: README.md  cyrius-port-gaps.md
docs/audit/: 2026-05-10-audit.md
docs/development/: api-surface-1.0.snapshot  roadmap.md  state.md
docs/examples/: basic_consumer.cyr
docs/guides/: getting-started.md
lib/: agnostik_error.cyr  agnostik_types.cyr
scripts/: audit.sh  check-api-surface.sh
src/: firewall.cyr  firewall.rs  lib.cyr  lib.rs  main.cyr  pam.cyr
tests/: aegis.bcyr  aegis.fcyr  aegis.tcyr
