[package]
name = "aegis"
version = "0.1.0"
edition = "2024"
rust-version = "1.89"
license = "GPL-3.0-only"
description = "Aegis — security daemon for AGNOS"
homepage = "https://github.com/MacCracken/aegis"
repository = "https://github.com/MacCracken/aegis"
readme = "README.md"
keywords = ["security", "daemon", "agent", "policy"]
categories = ["os", "authentication"]
exclude = [".claude/", ".github/", "docs/", "scripts/"]

[features]
default = []
firewall = ["dep:nein"]

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
nein = { version = "0.24", features = ["engine"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3"
